Implementação de index BRL
Inclusão de componente para apresentar indexação de bitcoin na moeda brasileira

--- a/client-http/src/app/bitcoin/bitcoin.component.html
+++ b/client-http/src/app/bitcoin/bitcoin.component.html
@@ -15,9 +15,9 @@
 <hr/>
 <div>
   <input type="button" value="Refresh" (click)="update()" />
-  <span>Updated in {{this.lastUpdate | date:"full"}}</span>
+  <span>&nbsp;Updated in {{this.lastUpdate | date:"full"}}</span>
 </div>
-
+<hr/>
 <h2>Update histoty</h2>
 <table class="table">
   <tr>
