--- a/client-http/src/app/index/index.component.html
+++ b/client-http/src/app/index/index.component.html
@@ -1,4 +1,7 @@
 <h1>Index</h1>
 <p>
-  Página inicial...
+  Web portal for bitcoin indexation using:<br/>
+  <a href="https://www.coindesk.com/coindesk-api" target="_blank">
+    CoinDesk API
+  </a>
 </p>
