--- a/client-http/src/app/app.component.html
+++ b/client-http/src/app/app.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/bitcoin']">BitCoin$</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/bitcoin-brl']">BitCoin(R$)</a>
+      </li>
     </ul>
   </div>
 </nav>
